@startuml Game

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 30

title Diagram Kelas Game (Facade)

class Game {
    - board : Board*
    - players : vector<Player*>
    - turnOrder : vector<int>
    - currentTurnIndex : int
    - currentTurn : int
    - maxTurn : int
    - initialBalance : int
    - goSalary : int
    - jailFine : int
    - pphFlat : int
    - pphPercent : int
    - pbmFlat : int
    - railroadRents : map<int, int>
    - utilityMultipliers : map<int, int>
    - chanceDeck : CardDeck<ChanceCard>*
    - communityDeck : CardDeck<CommunityChestCard>*
    - skillDeck : CardDeck<SkillCard>*
    - gameOver : bool
    - lastDiceTotal : int
    __
    + Game()
    + ~Game()
    + getCurrentPlayer() : Player*
    + getActivePlayers() : vector<Player*>
    + getActivePlayerCount() : int
    + advanceTurnOrder() : void
    + incrementTurn() : void
    + isMaxTurnReached() : bool
    + getBoard() : Board*
    + getPlayers() : const vector<Player*>&
    + getPlayer(index : int) : Player*
    + getChanceDeck() : CardDeck<ChanceCard>*
    + getCommunityDeck() : CardDeck<CommunityChestCard>*
    + getSkillDeck() : CardDeck<SkillCard>*
    + getLastDiceTotal() : int
    + setLastDiceTotal(total : int) : void
    + getGoSalary() : int
    + getJailFine() : int
    + getPphFlat() : int
    + getPphPercent() : int
    + getPbmFlat() : int
    + getRailroadRents() : const map<int, int>&
    + getUtilityMultipliers() : const map<int, int>&
    + isGameOver() : bool
    + setGameOver(over : bool) : void
    + getCurrentTurn() : int
    + getMaxTurn() : int
}

' Model yang dimiliki
class Board <<Model>> {
    + getTile(index : int) : Tile*
    + getNextIndex(current : int, steps : int) : int
    + passesGo(from : int, steps : int) : bool
    + getGoTile() : GoTile*
    + getJailTile() : JailTile*
    + getSize() : int
}

class Player <<Model>> {
    + getUsername() : string
    + getBalance() : int
    + getPosition() : int
    + getStatus() : PlayerStatus
}

class "CardDeck<ChanceCard>" as CDChance <<Model>> {
    + draw() : ChanceCard*
    + discard(card : ChanceCard*) : void
}

class "CardDeck<CommunityChestCard>" as CDComm <<Model>> {
    + draw() : CommunityChestCard*
    + discard(card : CommunityChestCard*) : void
}

class "CardDeck<SkillCard>" as CDSkill <<Model>> {
    + draw() : SkillCard*
    + discard(card : SkillCard*) : void
}

' Relasi
Game *-down- Board : owns 1 >
Game *-down- "2..4" Player : owns >
Game *-down- CDChance : owns 1 >
Game *-down- CDComm : owns 1 >
Game *-down- CDSkill : owns 1 >

' Model menerima Game& sebagai parameter
class Tile <<Model>> {
    + {abstract} onLanded(player : Player&, game : Game&) : void
    + onPassed(player : Player&, game : Game&) : void
}

class Card <<Model>> {
    + {abstract} execute(player : Player&, game : Game&) : void
}

Tile ..> Game : receives as param
Card ..> Game : receives as param

note right of Game
    <b>Facade / Aggregate Container</b>
    Memegang semua objek Model dan
    menyediakan getter untuk akses.

    <b>BUKAN controller</b> — tidak punya
    logika permainan. Yang mengatur
    alur permainan adalah GameEngine.

    <b>Di-pass ke Model sebagai Game&:</b>
    · Tile::onLanded(player, <b>game</b>)
    · Card::execute(player, <b>game</b>)

    Ini memungkinkan Model mengakses
    Board, Decks, Players, dan config
    tanpa coupling ke GameEngine.

    <b>Dimiliki oleh:</b> GameEngine
    <b>Direferensi oleh:</b> TurnManager,
    AuctionManager, BankruptcyManager
end note

@enduml
